Use correct way to register for a shortcut

setDefaultShortcut sets a default shortcut, but it doesn't bind it to
the action.

We want setShortcut.

setGlobalShortcut wraps both. By setting autoloading, it doesn't
actually overwrite the user-set shortcut if one is set.

BUG: 374575


(cherry picked from commit bd2fab0a52f85cad26c5dd1562313e4138d3352c)